Fixed unlock tooltip partially overflowing on narrow width phones(up to 380)

--- a/src/Components/Output.css
+++ b/src/Components/Output.css
@@ -163,7 +163,7 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 380px) {
   [data-tooltip]::after {
     max-width: calc(100vw - 25px);
   }
